# devboard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.prod.yml  docker-compose.yml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx
app/app/(auth)/: layout.tsx
app/app/(auth)/login/: page.tsx
app/app/(auth)/sign-in/: page.tsx
app/app/(auth)/sign-up/: page.tsx
app/components/: grid-background-demo.tsx
app/components/forms/: sign-in-form.tsx  sign-up-form.tsx
app/components/ui/: button.tsx  field.tsx  label.tsx  password-strength-meter.tsx
app/lib/: schema.ts
app/types/: index.d.ts
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  hash.rs  jwt.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: app.rs  auth.rs  database.rs  lib.rs  observability.rs  server.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  lib.rs
crates/db/src/entities/: comment.rs  mod.rs  organization.rs  prelude.rs  project.rs  project_membership.rs  task.rs  team.rs  team_membership.rs  user.rs
crates/domain/: Cargo.toml
crates/domain/src/: comment.rs  error.rs  ids.rs  lib.rs  organization.rs  project.rs  rbac.rs  task.rs  team.rs  user.rs
crates/graphql/: Cargo.toml
crates/graphql/src/: context.rs  error.rs  lib.rs  schema.rs
crates/graphql/src/dataloaders/: mod.rs  user_loader.rs
crates/graphql/src/inputs/: auth.rs  mod.rs  project.rs  task.rs
crates/graphql/src/resolvers/: mod.rs  mutation.rs  query.rs  subscription.rs
crates/graphql/src/types/: mod.rs  pagination.rs  project.rs  subscription.rs  task.rs  user.rs
crates/repository/: Cargo.toml
crates/repository/src/: error.rs  lib.rs
crates/repository/src/comment/: mod.rs  pg.rs
crates/repository/src/project/: mod.rs  pg.rs
crates/repository/src/task/: mod.rs  pg.rs
crates/repository/src/team/: mod.rs  pg.rs
crates/repository/src/user/: mod.rs  pg.rs
crates/service/: Cargo.toml
crates/service/src/: auth.rs  error.rs  event_bus.rs  events.rs  lib.rs  project.rs  task.rs
crates/service/tests/: task_service_test.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260621_141230_create_organizations.rs  m20260621_201057_create_users.rs  m20260621_201126_create_teams.rs  m20260621_201149_create_team_memberships.rs  m20260621_201203_create_projects.rs  m20260621_201221_create_project_memberships.rs  m20260621_201248_create_tasks.rs  m20260621_201300_create_comments.rs
scripts/: ci-checks.sh  ci-web-checks.sh
src/: auth_routes.rs  main.rs
tests/: integration_test.rs
