[workspace]
members = [
  "crates/auth",
  "crates/config",
  "crates/db",
  "crates/domain",
  "crates/graphql",
  "crates/repository",
  "crates/service",
  "migration"
]
resolver = "2"

[package]
name = "devboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name="devboard"
path="src/main.rs"

[dependencies]
devboard-config = { path = "crates/config" }
devboard-graphql = { path = "crates/graphql" }
devboard-db = { path = "crates/db" }
devboard-repository = { path = "crates/repository" }
devboard-auth = { path = "crates/auth" }
devboard-service = { path = "crates/service" }
devboard-domain = { path = "crates/domain" }
migration = { path = "migration" }
axum = { workspace = true }
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
sea-orm = { workspace = true }
chrono = { workspace = true }

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
sea-orm = { version = "=2.0.0-rc.41", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "with-uuid",
  "with-chrono",
  "macros"
]}
async-graphql = { version = "7.2.1", features = ["dataloader", "chrono", "uuid", "boxed-trait"] }
async-graphql-axum = "7.2.1"
axum = {version = "0.8.9", features= ["ws"]}
tower = "0.5.3"
tower-http = { version = "0.7", features = ["cors", "trace"] }
argon2 = "0.5.3"
jsonwebtoken = {version = "10.4.0", features = ["rust_crypto"]}
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter", "json"]}
validator = {version = "0.20.0", features = ["derive"]}
config = "0.15.24"
async-trait = "0.1.89"
dotenvy = "0.15.7"