[package]
name = "devboard-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
devboard-domain = { path = "../domain" }
devboard-service = { path = "../service" }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }