[package]
name = "devboard-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
devboard-domain = { path = "../domain" }
devboard-service = { path = "../service" }
devboard-repository = { path = "../repository" }
devboard-auth = { path = "../auth" }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-stream = "0.3.6"
axum = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.18"
async-trait = { workspace = true }