[package]
name = "devboard-repository"
version = "0.1.0"
edition = "2024"

[dependencies]
devboard-domain = { path = "../domain" }
devboard-db = { path = "../db" }
migration = { path = "../../migration" }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }