[package]
name = "devboard-service"
version = "0.1.0"
edition = "2024"

[dependencies]
devboard-domain = { path = "../domain" }
devboard-auth = { path = "../auth" }
devboard-repository = { path = "../repository" }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }

[[test]]
name="task_service_test"
path="tests/task_service_test.rs"